--- a/HTML-8.html
+++ b/HTML-8.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     <script>
-
-
-
-
+        const num1 = prompt('Enter the Number');
+        if (num1 > 100 ){
+            console.log('Out of range');
+        }else if(num1 < 50){
+            console.log('Out of Range');
+        }else{
+            console.log('EXACTLY IN THE RANGE!!!');
+        }
 
     </script>
     
